Fix navbar breakpoints; add dark mode support

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,158 +1,168 @@
-:root {
-    --red: #f53039;
+$bg: #fafafa;
+$fg: #1a1a1a;
+$ac: #f53039;
+
+html {
+	font-family: 'Inter', 'Segoe UI', sans-serif;
+	background: $bg;
+	color: $fg;
 }
 
-html,
-body {
-    font-family: 'Inter',
-                 'Segoe UI',
-                 sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-feature-settings: "liga" on, "calt" on;
-    -webkit-font-smoothing: antialiased;
-    background: #fafafa;
-    color: #1a1a1a;
-    margin: .5rem 0rem;
-    a {
-        color: #f53039;
-        &:hover,
-        &:focus { color: #c6262e; }
-    }
+a {
+	color: $ac;
+	text-decoration: none;
+	&:hover, &:focus { background:$ac; color:$bg; }
 }
 
-.container { margin-bottom: 2rem; }
+nav {
 
-.wordmark { &:hover { border-bottom: 1px solid #000; } }
+}
 
 section {
-    h2 {
-        text-align: center;
-        font-size: 3rem;
-    }
-    h3 {
-        font-size: 1.5rem;
-        margin-top: .5rem;
-        margin-bottom: .5rem;
-    }
-    h2,
-    h3 { font-weight: bold; }
+	h2 {
+		text-align: center;
+		font-size: 3rem;
+	}
+	h3 {
+		font-size: 1.5rem;
+		margin-top: .5rem;
+		margin-bottom: .5rem;
+	}
+	h2,
+	h3 { font-weight: bold; }
 }
 
 button {
-    padding: .5rem 1rem;
-    cursor: pointer;
-    transition: all 100ms ease-in-out;
-    text-align: center;
-    text-decoration: none;
-    border-radius: .5rem;
-    appearance: none;
-    background: #fff;
-    border: .1rem black solid;
-    color: black;
-    &:hover { background: var(--red); }
+	padding: .5rem 1rem;
+	cursor: pointer;
+	transition: all 100ms ease-in-out;
+	text-align: center;
+	text-decoration: none;
+	border-radius: .5rem;
+	appearance: none;
+	border: .1rem $fg solid;
+	color: $fg;
+	background: $bg;
+	&:hover { background: $ac; }
 }
 
 table {
-    background: #d4d4d4;
-    border-collapse: collapse;
-    display: table;
-    width: 100%;
-    table-layout: fixed;
-    th {
-        background: #7e8087;
-        color: #fff;
-    }
-    th,
-    td { padding: .5rem 2rem; }
+	background: #d4d4d4;
+	border-collapse: collapse;
+	display: table;
+	width: 100%;
+	table-layout: fixed;
+	th {
+		background: #7e8087;
+		color: #fff;
+	}
+	th,
+	td { padding: .5rem 2rem; }
 }
 
 .centre { text-align: center; }
 
 .flex {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    @media (min-width: 600px) {
-        flex-direction: row;
-        gap: 2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	@media (min-width: 600px) {
+		flex-direction: row;
+		gap: 2rem;
 
-    }
+	}
 }
 
 .card {
-    color: #000;
-    box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.25);
-    padding: 1rem;
-    flex: 1 1 0px;
-    border-radius: .5rem;
+	color: #000;
+	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.25);
+	padding: 1rem;
+	flex: 1 1 0px;
+	border-radius: .5rem;
 }
 
 .o {
-    background: linear-gradient(to bottom, #FFF4EF, #FFD2BE);
-    background-color: #FFF4EF;
+	background: linear-gradient(to bottom, #FFF4EF, #FFD2BE);
+	background-color: #FFF4EF;
 }
 .g {
-    background: linear-gradient(to bottom, #EFFFF2, #BEFFCC);
-    background-color: #FFF4EF;
+	background: linear-gradient(to bottom, #EFFFF2, #BEFFCC);
+	background-color: #FFF4EF;
 }
 .p {
-    background: linear-gradient(to bottom, #FAEFFF, #EEBEFF);
-    background-color: #FAEFFF;
+	background: linear-gradient(to bottom, #FAEFFF, #EEBEFF);
+	background-color: #FAEFFF;
 }
 
 header {
-    text-align: center;
-    h1,
-    .title,
-    .t {
-        font-size: 2.5rem;
-        font-weight: bold;
-    }
-    .t {
-        margin-top: .75rem;
-        margin-bottom: .75rem;
-    }
-    .t > b {
-        color: var(--red);
-    }
-    @media (min-size: 800px) {
-        h1,
-        .title { font-size: 3.5rem; }
-    }
+	text-align: center;
+	h1,
+	.title,
+	.t {
+		font-size: 2.5rem;
+		font-weight: bold;
+	}
+	.t {
+		margin-top: .75rem;
+		margin-bottom: .75rem;
+	}
+	.t > b {
+		color: $ac;
+	}
+	@media (min-width: 800px) {
+		h1,
+		.title { font-size: 3.5rem; }
+	}
 }
 footer {
-    text-align: center;
-    margin-bottom: 3rem;
+	text-align: center;
+	margin-bottom: 3rem;
 }
 
 .readable { margin: auto 2rem; }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    @media (min-size: 600px) {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    ul {
-        display: flex;
-        padding-left: 0;
-        list-style: none;
-        flex-direction: column;
-        li { margin: .25rem auto; }
-        @media (min-size: 600px) {
-            li {
-                padding-left: .25rem;
-                padding-right: .25rem;
-            }
-            flex-direction: row;
-        }
-    }
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	@media (min-width: 600px) {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	ul {
+		display: flex;
+		padding-left: 0;
+		list-style: none;
+		flex-direction: column;
+		li { margin: .25rem auto; }
+		@media (min-width: 600px) {
+			li {
+				padding-left: .25rem;
+				padding-right: .25rem;
+			}
+			flex-direction: row;
+		}
+	}
 }
 
 .cta {
-    background: #d4d4d4;
-    font-size: 1.1rem;
-    padding: .1rem 1rem;
+	background: #d4d4d4;
+	font-size: 1.1rem;
+	padding: .1rem 1rem;
+}
+
+@media (prefers-color-scheme: dark) {
+	$bg: #000;
+	$fg: #fff;
+
+	html {
+		background: $bg;
+		color: $fg;
+	}
+
+	button {
+		background: $bg;
+		color: $fg;
+		border: .1rem $ac solid;
+	}
 }
